test/modules/errors/call-module.chpl
module Program {
  module M { }
  M(20);
}
