test/modules/errors/call-module.good
call-module.chpl:1: In module 'Program':
call-module.chpl:3: error: modules (like 'M' here) cannot be called like procedures
